add cloneDeep method

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "extobj",
-  "version": "0.1.0",
-  "description": "The commonjs module extended Object with two methods assignDeep and cloneDeep.",
+  "version": "0.1.1",
+  "description": "The module extending Object with new methods assignDeep, createDeep and cloneDeep.",
   "keywords": [
-    "Object.assignDeep", "Object.cloneDeep", "Object assign deep", "Object clone deep", "Object copy deep", "Object create deep", "Object full copy", "Object full assign", "Object full clone"  
+    "Object.assignDeep", "Object.createDeep", "Object.cloneDeep", "Object assign deep", "Object clone deep", "Object copy deep", "Object create deep", "Object full copy", "Object full assign", "Object full clone", "Java script"  
   ],
   "homepage": "https://github.com/Pofigizm/extobj",
   "bugs": "https://github.com/Pofigizm/extobj/issues",
